# VideoProcess

./: .gitignore  CMakeLists.txt  Makefile  README.md  Setup.ini  VPS.cpp  VPS.h  VideoProcess.rb  build.sh  com_onycom_vps_VPSNativeLib.cpp  com_onycom_vps_VPSNativeLib.h  libVPSNativelib.dylib  main.cpp  shared_memory.txt  testforte.sh  vps
common/: Mutex.h  Timer.cpp  Timer.h  VPSCommon.cpp  VPSCommon.h  VPSLogger.cpp  VPSLogger.h
javaui/: Callback_MemPool.cpp  Callback_MemPool.h  Callback_Queue.cpp  Callback_Queue.h  com_onycom_vps_VPSNativeLib.cpp  com_onycom_vps_VPSNativeLib.h
mirroring/: MIR_Client.cpp  MIR_Client.h  MIR_MemPool.cpp  MIR_MemPool.h  MIR_Queue.cpp  MIR_Queue.h  MIR_QueueHandler.cpp  MIR_QueueHandler.h  MirrorCommon.cpp  MirrorCommon.h  Mirroring.cpp  Mirroring.h  VPSJpeg.cpp  VPSJpeg.h
network/: AsyncMediaServerSocket.cpp  AsyncMediaServerSocket.h  ClientList.cpp  ClientList.h  ClientObject.cpp  ClientObject.h  NetManager.cpp  NetManager.h
recorder/: Rec_MemPool.cpp  Rec_MemPool.h  Rec_Queue.cpp  Rec_Queue.h  VideoRecorder.cpp  VideoRecorder.h
src/: main.cpp
src/common/: Mutex.cpp  VPSCommon.cpp  VPSCommon.h
src/javaui/: Callback_MemPool.cpp  Callback_MemPool.h  com_onycom_vps_VPSNativeLib.cpp
src/mirroring/: MIR_Client.h  MIR_MemPool.cpp  MIR_Queue.cpp  MIR_Queue.h  MIR_QueueHandler.cpp  Mirroring.cpp  Mirroring.h  VPSJpeg.cpp  VPSJpeg.h
src/network/: AsyncMediaServerSocket.h  ClientList.cpp  ClientObject.cpp
src/recorder/: Rec_MemPool.cpp  Rec_Queue.h  VideoRecorder.h
